--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
   <link rel="stylesheet" href="./Styles.css">
   <script src="./Main.js"></script>
-  <title>Frontend Mentor | Easybank landing page</title>  
+  <title>Easybank landing page</title>  
 
   
 </head>
