--- a/index.html
+++ b/index.html
@@ -119,28 +119,28 @@
     <h1 class="text-blue-950 text-4xl font-light sm:mb-12 max-[640px]:mb-14">Latest Articles</h1>
     <div class="flex md:flex-row md:mt-12 md:justify-between sm:flex-col sm:items-center max-[640px]:flex-col max-[640px]:items-center">
       <div class="h-[400px] max-[450px]:ml-0 bg-white rounded-b-lg sm:mb-14 sm:w-96 max-[640px]:mb-11">
-        <img src="./images/image-currency.jpg" class="rounded-t-lg md:h-44 sm:w-fit w-[100%] object-cover" alt="">
+        <img src="./images/image-currency.jpg" class="rounded-t-lg md:h-44 w-[100%] object-cover" alt="">
         <p class=" text-gray-500 text-xs mt-3 ml-6">By Claire Robinson</p>
         <p class="text-blue-950 text-1xl font-semibold my-2 mr-7 ml-6 hover:cursor-pointer hover:text-lime-500">Receive money in any currency with no fees</p>
         <p class="my-5 text-gray-500 text-sm ml-6">The world is getting smaller and we’re becoming more mobile. So why should you be 
           forced to only receive money in a single …</p>
       </div>
       <div class="h-[400px] max-[450px]:ml-0 bg-white md:ml-5 rounded-b-lg sm:mb-14 sm:w-96 max-[640px]:mb-11">
-        <img src="./images/image-restaurant.jpg" class="w-[100%] object-cover rounded-t-lg md:h-44 sm:w-fit" alt="">
+        <img src="./images/image-restaurant.jpg" class="w-[100%] object-cover rounded-t-lg md:h-44" alt="">
         <p class=" text-gray-500 text-xs mt-3 ml-6">By Wilson Hutton</p>
         <p class="text-blue-950 text-1xl font-semibold my-2 mr-7 ml-6 hover:cursor-pointer hover:text-lime-500">Treat yourself without worrying about money</p>
         <p class="my-5 text-gray-500 text-sm ml-6">Our simple budgeting feature allows you to separate out your spending and set 
           realistic limits each month. That means you …</p>
       </div>
       <div class="h-[400px] max-[450px]:ml-0 bg-white rounded-b-lg ml-5 sm:mb-14 sm:w-96 max-[640px]:mb-11">
-        <img src="./images/image-plane.jpg" alt="" class="w-[100%] object-cover rounded-t-lg md:h-44 sm:w-fit">
+        <img src="./images/image-plane.jpg" alt="" class="w-[100%] object-cover rounded-t-lg md:h-44">
         <p class=" text-gray-500 text-xs mt-3 ml-6">By Wilson Hutton</p>
         <p class="text-blue-950 text-1xl font-semibold my-2 mr-7 ml-6 hover:cursor-pointer hover:text-lime-500">Take your Easybank card wherever you go</p>
         <p class="my-5 text-gray-500 text-sm ml-6">We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
           while you’re abroad. We’ll even show you …</p>
       </div>
       <div class="h-[400px] max-[450px]:ml-0 bg-white ml-5 rounded-b-lg sm:mb-14 sm:w-96 max-[640px]:mb-11">
-        <img src="./images/image-confetti.jpg" alt="" class="w-[100%] object-cover rounded-t-lg md:h-44 sm:w-fit">
+        <img src="./images/image-confetti.jpg" alt="" class="w-[100%] object-cover rounded-t-lg md:h-44">
         <p class=" text-gray-500 text-xs mt-3 ml-6">By Claire Robinson</p>
         <p class="text-blue-950 text-1xl font-semibold my-2 mr-7 ml-6 hover:cursor-pointer hover:text-lime-500">Our invite-only Beta accounts are now live!</p>
         <p class="my-5 text-gray-500 text-sm ml-6">After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
